--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap4.css">
+    <!--<link rel="stylesheet" href="styles/bootstrap4.css">-->
+    <link rel="stylesheet" href="styles/bootstrap-layout.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/main.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Polyfill(s) for older browsers -->
