--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="stylesheet" href="styles/bootstrap4.css">-->
+    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css" />
     <link rel="stylesheet" href="styles/bootstrap-layout.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css" />
     <link rel="stylesheet" href="styles/main.css">
+
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Polyfill(s) for older browsers -->
